added animation handling

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,20 +5,22 @@ Size=400,400
 [Window][Leg Debugging]
 Pos=60,60
 Size=67,54
+Collapsed=1
 
 [Window][Old Debugging]
-Pos=60,60
+Pos=11,26
 Size=437,575
+Collapsed=1
 
 [Window][Body Control]
-Pos=59,662
+Pos=59,581
 Size=144,123
 
 [Window][Joystick Controller]
-Pos=275,680
+Pos=275,581
 Size=189,132
 
 [Window][Body Debugging]
-Pos=640,47
+Pos=48,171
 Size=245,77
 
