working leg movement and gait control but no interpolation between body positions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "dotnet.defaultSolution": "disable",
     "files.associations": {
-        "cstdlib": "cpp"
+        "cstdlib": "cpp",
+        "__availability": "cpp",
+        "__hash_table": "cpp",
+        "*.cmake": "cpp",
+        "typeinfo": "cpp"
     }
 }
