--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "(lldb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "/Users/archiejames/coding/bleep-prime/build/Debug/bin/bleep",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb"
+        },
+        {
             "name": "C++ Launch (Windows)",
             "type": "cppvsdbg",
             "request": "launch",
