--- a/imgui.ini
+++ b/imgui.ini
@@ -13,7 +13,7 @@ Collapsed=1
 
 [Window][Body Control]
 Pos=5,27
-Size=182,107
+Size=192,103
 
 [Window][Joystick Controller]
 Pos=9,248
@@ -22,4 +22,8 @@ Size=189,132
 [Window][Body Debugging]
 Pos=48,171
 Size=245,77
+
+[Window][Phase Status]
+Pos=15,393
+Size=152,104
 
