full gait animation

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,8 +3,9 @@ Pos=60,60
 Size=400,400
 
 [Window][Leg Debugging]
-Pos=5,215
+Pos=262,26
 Size=205,102
+Collapsed=1
 
 [Window][Old Debugging]
 Pos=11,26
@@ -13,17 +14,17 @@ Collapsed=1
 
 [Window][Body Control]
 Pos=5,27
-Size=253,180
+Size=254,149
 
 [Window][Joystick Controller]
-Pos=8,322
-Size=222,160
+Pos=6,183
+Size=220,160
 
 [Window][Body Debugging]
 Pos=48,171
 Size=245,77
 
 [Window][Phase Status]
-Pos=8,489
-Size=152,104
+Pos=7,347
+Size=187,229
 
