commit before adding angle corrections

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,22 +3,21 @@ Pos=60,60
 Size=400,400
 
 [Window][Leg Debugging]
-Pos=261,28
+Pos=257,19
 Size=205,102
-Collapsed=1
 
 [Window][Old Debugging]
-Pos=11,26
-Size=437,575
+Pos=14,581
+Size=236,576
 Collapsed=1
 
 [Window][Body Control]
-Pos=5,27
-Size=250,171
+Pos=3,16
+Size=250,210
 
 [Window][Joystick Controller]
-Pos=6,204
-Size=220,160
+Pos=4,226
+Size=203,122
 
 [Window][Body Debugging]
 Pos=48,171
@@ -27,4 +26,20 @@ Size=245,77
 [Window][Phase Status]
 Pos=6,365
 Size=187,229
+
+[Window][Status]
+Pos=1,348
+Size=205,241
+
+[Window][Serial Control]
+Pos=807,29
+Size=276,270
+
+[Window][Serial Debugging]
+Pos=206,227
+Size=111,358
+
+[Window][Number Input Fields]
+Pos=1094,22
+Size=321,470
 
