--- a/imgui.ini
+++ b/imgui.ini
@@ -3,21 +3,22 @@ Pos=60,60
 Size=400,400
 
 [Window][Leg Debugging]
-Pos=257,19
+Pos=262,20
 Size=205,102
+Collapsed=1
 
 [Window][Old Debugging]
-Pos=14,581
-Size=236,576
+Pos=262,41
+Size=205,576
 Collapsed=1
 
 [Window][Body Control]
-Pos=3,16
-Size=250,210
+Pos=5,24
+Size=252,240
 
 [Window][Joystick Controller]
-Pos=4,226
-Size=203,122
+Pos=4,262
+Size=206,91
 
 [Window][Body Debugging]
 Pos=48,171
@@ -28,18 +29,21 @@ Pos=6,365
 Size=187,229
 
 [Window][Status]
-Pos=1,348
+Pos=3,356
 Size=205,241
 
 [Window][Serial Control]
-Pos=807,29
-Size=276,270
+Pos=516,24
+Size=282,321
+Collapsed=1
 
 [Window][Serial Debugging]
-Pos=206,227
-Size=111,358
+Pos=517,44
+Size=275,358
+Collapsed=1
 
 [Window][Number Input Fields]
-Pos=1094,22
-Size=321,470
+Pos=517,67
+Size=587,466
+Collapsed=1
 
