--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(lldb) Launch",
+            "name": "(lldb) Launch 0",
             "type": "cppdbg",
             "request": "launch",
             "program": "/Users/archiejames/coding/bleep-prime/build/Debug/bin/bleep",
@@ -16,11 +16,35 @@
             "externalConsole": false,
             "MIMode": "lldb"
         },
+        // {
+        //     "name": "C++ Launch (Windows)",
+        //     "type": "cppvsdbg",
+        //     "request": "launch",
+        //     "program": "C:\\Users\\arjam\\Documents\\coding\\bleep\\build\\Debug\\bin\\bleep.exe"
+        // },
         {
-            "name": "C++ Launch (Windows)",
-            "type": "cppvsdbg",
+            "name": "(lldb) Launch",
+            "type": "cppdbg",
             "request": "launch",
-            "program": "C:\\Users\\arjam\\Documents\\coding\\bleep\\build\\Debug\\bin\\bleep.exe"
+            // Resolved by CMake Tools:
+            "program": "${command:cmake.launchTargetPath}",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [
+                {
+                    // add the directory where our target was built to the PATHs
+                    // it gets resolved by CMake Tools:
+                    "name": "PATH",
+                    "value": "${env:PATH}:${command:cmake.getLaunchTargetDirectory}"
+                }
+            ],
+            // "externalConsole": true,
+            "MIMode": "lldb",
+            "logging": {
+            "moduleLoad": false
+            },
+            "targetArchitecture": "x86_64"
         }
     ]
 }
